--- a/RAxMLnative/res/layout/main.xml
+++ b/RAxMLnative/res/layout/main.xml
@@ -40,57 +40,48 @@
           android:id="@+id/tableRow1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" >
-
-        
           <TextView
               android:id="@+id/DataFileName"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="dna_data" />
-	  <Button
-              android:id="@+id/buttonSelectData"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text="..." />
-          
+		  <Button
+		      android:id="@+id/buttonSelectData"
+		      android:layout_width="wrap_content"
+		      android:layout_height="wrap_content"
+		      android:text="..." />
       </TableRow>
       <TableRow
           android:id="@+id/tableRow2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" >
-
-        
           <TextView
               android:id="@+id/TreeFileName"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="start_tree" />
-	  <Button
-              android:id="@+id/buttonSelectTree"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:text="..." />
-          
+		  <Button
+		      android:id="@+id/buttonSelectTree"
+		      android:layout_width="wrap_content"
+		      android:layout_height="wrap_content"
+		      android:text="..." />
       </TableRow>
-
       <TableRow
           android:id="@+id/tableRow3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" >
-	  <TextView
-	      android:id="@+id/parameter1Desc"
-	      android:layout_width="wrap_content"
-	      android:layout_height="wrap_content"
-	      android:text="Parameter 1"
-	      android:textAppearance="?android:attr/textAppearanceLarge" />
-	
-	  <EditText
-	      android:id="@+id/parameter1"
-	      android:layout_width="wrap_content"
-	      android:layout_height="wrap_content"
-	      android:text = "32"
-	      android:ems="10" >
-	  </EditText>
+		  <TextView
+		      android:id="@+id/parameter1Desc"
+		      android:layout_width="match_parent"
+		      android:layout_height="wrap_content"
+		      android:text="Parameter 1"
+		      android:textAppearance="?android:attr/textAppearanceLarge" />
+		  <EditText
+		      android:id="@+id/parameter1"
+		      android:layout_width="match_parent"
+		      android:layout_height="wrap_content"
+		      android:text="23"
+		      android:textAppearance="?android:attr/textAppearanceLarge" />
       </TableRow>
   </TableLayout>
 
