--- a/RAxMLnative/res/layout/main.xml
+++ b/RAxMLnative/res/layout/main.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
@@ -8,25 +7,21 @@
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello" />
--->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+        android:text="NDK Demo"
+        android:textSize="22sp" />
 
-  <TextView android:layout_width="fill_parent"
-    android:layout_height="wrap_content" 
-    android:text="NDK Demo"
-    android:textSize="22sp" />
-  <TextView android:layout_width="wrap_content"
-    android:layout_height="wrap_content" 
-    android:id="@+id/textOut"
-    android:text="output" />
-  <Button android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/buttonCalc"
-    android:text="Calculate Tree"/>
+    <TextView
+        android:id="@+id/textOut"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="output" />
+
+    <Button
+        android:id="@+id/buttonCalc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calculate Tree" />
+
   <TextView android:layout_width="wrap_content"
     android:layout_height="wrap_content" 
     android:text="result"
@@ -83,6 +78,56 @@
 		      android:text="23"
 		      android:textAppearance="?android:attr/textAppearanceLarge" />
       </TableRow>
+      <TableRow
+          android:id="@+id/tableRow4"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content" >
+
+		  <Switch
+		      android:id="@+id/useMedian"
+		      android:layout_width="wrap_content"
+		      android:layout_height="wrap_content"
+		      android:text="Use median" />
+
+      </TableRow>
   </TableLayout>
+
+  <TableRow
+      android:id="@+id/tableRow5"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content" >
+
+          <TextView
+              android:id="@+id/textView1"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Model:  "
+              android:textAppearance="?android:attr/textAppearanceLarge" />
+
+      <RadioGroup
+          android:id="@+id/radioGroup1"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content" >
+
+          <RadioButton
+              android:id="@+id/cat"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:checked="true"
+              android:text="CAT" />
+
+          <RadioButton
+              android:id="@+id/gamma"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="GAMMA" />
+          <RadioButton
+              android:id="@+id/gamma_i"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="GAMMA_I" />
+      </RadioGroup>
+
+  </TableRow>
 
 </LinearLayout>
