--- a/RAxMLnative/res/layout/main.xml
+++ b/RAxMLnative/res/layout/main.xml
@@ -19,7 +19,7 @@
   <TextView android:layout_width="wrap_content"
     android:layout_height="wrap_content" 
     android:text="result"
-    android:textSize="36sp" 
+    android:textAppearance="?android:attr/textAppearanceMedium" 
     android:id="@+id/result"/>
 
   <TableLayout
