--- a/RAxMLnative/res/layout/main.xml
+++ b/RAxMLnative/res/layout/main.xml
@@ -22,29 +22,34 @@
     android:textAppearance="?android:attr/textAppearanceMedium" 
     android:id="@+id/result"/>
 
+
   <TableLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content" >
+  <TextView
+      android:id="@+id/textView2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Data file"
+      android:textAppearance="?android:attr/textAppearanceMedium" />
           <TextView
               android:id="@+id/DataFileName"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="/sdcard/tiny.binary" />
-		  <Button
-		      android:id="@+id/buttonSelectData"
-		      android:layout_width="wrap_content"
-		      android:layout_height="wrap_content"
-		      android:text="Select data" />
+
+          <TextView
+              android:id="@+id/textView3"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Starting tree"
+              android:textAppearance="?android:attr/textAppearanceMedium" />
+
           <TextView
               android:id="@+id/TreeFileName"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="/sdcard/RAxML_parsimonyTree.tiny.0" />
-		  <Button
-		      android:id="@+id/buttonSelectTree"
-		      android:layout_width="wrap_content"
-		      android:layout_height="wrap_content"
-		      android:text="Select starting tree" />
       <TableRow
           android:id="@+id/tableRow3"
           android:layout_width="wrap_content"
@@ -61,6 +66,7 @@
 		      android:text="RAxMLout"
 		      android:textAppearance="?android:attr/textAppearanceMedium" />
       </TableRow>
+      <!-- 
       <TableRow
           android:id="@+id/tableRow4"
           android:layout_width="wrap_content"
@@ -73,6 +79,7 @@
 		      android:text="Use median" />
 
       </TableRow>
+      -->
   </TableLayout>
 
   <TableRow
